@@ -92,7 +92,8 @@ with \fBecho \-e '\\033%@'\fP
 .IP \fB\-V\fP
 Display version information.
 .IP \fB\-Z\fP
-(SELinux) Show security context for each process.
+(SELinux) Show security context for each process. This flag will only work if
+pstree is compilied with SELinux support.
 .SH FILES
 .nf
 /proc	location of the proc file system
